hphp/hack/test/pocket_universes/typing/decl1.bad.php.exp
File "decl1.bad.php", line 6, characters 19-19:
Unbound name: U (Naming[2049])
