hphp/hack/test/pocket_universes/typing/decl1.bad.php
<?hh // strict
// KO: T mapped to an invalid (unknown) type
class PU5 {
  enum X {
    case type T;
    :@X (type T = U);
  }
}
